k8s/api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: video-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: riturroy/myvideoapp-api:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
            - name: processed
              mountPath: /app/processed
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 1000m
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads-pvc
        - name: processed
          persistentVolumeClaim:
            claimName: processed-pvc
